@startuml
'https://plantuml.com/class-diagram

title 命令模式类图
class CommandStack{
Stack<Command> unStack
Stack<Command> reStack
redo()
undo()
execute(command)
}

class Command{
execute()
redo()
undo()
}

'CommandStack会有多个Command
CommandStack ..> Command
class ShowTreeCommand{
Bookmark bookmark

execute()

}

class DeleteCommand{
Model model
String[] deleteCommand
Map<OprationParentNode,?> deleteRecord
undo()
execute()
}

class AddCommand{
Model model
String[] addCommand
Map<OprationParentNode,?> addRecord
undo()
execute()
}

class OpenCommand{
Model model
String filename
execute()
}

class SaveCommand{
Model model
String filename
execute()
}

class ReadBookmarkCommand{
Model model
String bookmarkName
execute()
}

class LsTreeCommand{
execute()
}

class Model{
Bookmark bookmark
addCommand(String command[])
deleteCommand(String deleteCommand[])
saveBookmarkToFile(String fileName)
loadBookmarkFromFile(String fileName)
readBookmark(String bookmarkName, Bookmark bookmark)
undoFromDeleteTitle(OperationParentNode node, Bookmark b)
undoFromDeleteMark(OperationParentNode node, MarkInfo markInfo)
undoFromAddTitle(OperationParentNode node, Bookmark b)
undoFromAddMark(OperationParentNode node, MarkInfo markInfo)
}

'继承关系
Command <|-- DeleteCommand
Command <|-- AddCommand
Command <|-- OpenCommand
Command <|-- SaveCommand
Command <|-- ReadBookmarkCommand
Command <|-- LsTreeCommand
Command <|-- ShowTreeCommand

'关联关系
DeleteCommand *-- Model
AddCommand *-- Model
OpenCommand *-- Model
SaveCommand *-- Model
ReadBookmarkCommand *-- Model


@enduml
